--- a/src/app/components/planet-cards/planet-cards.component.scss
+++ b/src/app/components/planet-cards/planet-cards.component.scss
@@ -5,12 +5,15 @@
     .planets-card {
         width: 200px;
         margin: 40px 40px 0 0;
+        cursor: pointer;
     }
 }
-
-
 
 .load-more-button {
     margin: 20px auto;
     display: block;
+}
+
+.warn-button {
+    @extend .load-more-button;
 }
